--- a/app/templates/dog.html
+++ b/app/templates/dog.html
@@ -38,7 +38,7 @@
                     {{ item.owners }}
                 {% endif %}
                 {% if item.owners_number %}
-                    <br><a href="tel:+{{ item.mobile }}">{{ item.owners_number }}</a> [{{ item.mobile }}]
+                    <br><a href="tel:+{{ item.mobile }}">{{ item.owners_number }}</a>
                 {% endif %}
             </td>
             <td>
@@ -55,7 +55,9 @@
                     {% endif %}
             <td>
                 {% for booking in item.bookings %}
-                {{ booking.short_name }}<br>
+                    {% if booking.in_future %}
+                        {{ booking.short_name }}<br>
+                    {% endif %}
                 {% endfor %}
                 <a class="btn btn-yak btn-sm" href="{% url 'booking' item.id %}">Add booking</a>
             </td>
