--- a/app/templates/tennis_match.html
+++ b/app/templates/tennis_match.html
@@ -1,25 +1,24 @@
 {% extends 'base_no_nav.html'%}
 {% block content %}
 
-<h1 id="top">Tennis</h1>
     <div class="row">
-        <div class="col-sm-3" style="background-color: #ffe5ea; padding: 10px; border: 4px solid white; text-align: center">
+        <div class="col-sm-2" style="background-color: #ffe5ea; padding: 10px; border: 4px solid white; text-align: center">
             <a class="btn btn-yak" href="{% url 'tennis_score' set.id 1 0 %}">{{ match.player_A }}</a><br><br>
             <a class="btn btn-yak" href="{% url 'tennis_score' set.id -1 0 %}">-</a>
         </div>
-        <div class="col-sm-6" style="background-color: #ffe5ea; padding: 10px; border: 4px solid white; text-align: center">
+        <div class="col-sm-8" style="background-color: #ffe5ea; padding: 10px; border: 4px solid white; text-align: center">
             <h1>{{ match.game_score }}</h1>
             <div class="row">
             {% for set in match.sets %}
                 <div class="col-sm-3" style="background-color: #ffe5ea; padding: 10px; border: 4px solid pink; text-align: center">
                     <h3>{{ set.score_string | safe }}</h3>
-                    <b>Game scores</b><br>
+                    <b>Games</b><br>
                     {{ set.game_scores | safe }}<br>
                 </div>
             {% endfor %}
             </div>
         </div>
-        <div class="col-sm-3" style="background-color: #ffe5ea; padding: 10px; border: 4px solid white; text-align: center">
+        <div class="col-sm-2" style="background-color: #ffe5ea; padding: 10px; border: 4px solid white; text-align: center">
             <a class="btn btn-yak" href="{% url 'tennis_score' set.id 0 1 %}">{{ match.player_B }}</a><br><br>
             <a class="btn btn-yak" href="{% url 'tennis_score' set.id 0 -1 %}">-</a>
         </div>
