--- a/app/templates/tennis_match.html
+++ b/app/templates/tennis_match.html
@@ -3,7 +3,7 @@
 
     <div class="row">
         <div class="col-sm-2" style="background-color: #ffe5ea; padding: 10px; border: 4px solid white; text-align: center">
-            <a class="btn btn-yak" href="{% url 'tennis_score' set.id 1 0 %}">{{ match.player_A }}</a><br><br>
+            <a class="btn btn-yak" href="{% url 'tennis_score' set.id 1 0 %}">{{ match.play_A }}</a><br><br>
             <a class="btn btn-yak" href="{% url 'tennis_score' set.id -1 0 %}">-</a>
         </div>
         <div class="col-sm-8" style="background-color: #ffe5ea; padding: 10px; border: 4px solid white; text-align: center">
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="col-sm-2" style="background-color: #ffe5ea; padding: 10px; border: 4px solid white; text-align: center">
-            <a class="btn btn-yak" href="{% url 'tennis_score' set.id 0 1 %}">{{ match.player_B }}</a><br><br>
+            <a class="btn btn-yak" href="{% url 'tennis_score' set.id 0 1 %}">{{ match.play_B }}</a><br><br>
             <a class="btn btn-yak" href="{% url 'tennis_score' set.id 0 -1 %}">-</a>
         </div>
     </div>
