--- a/app/templates/tennis_match.html
+++ b/app/templates/tennis_match.html
@@ -24,8 +24,14 @@
         </div>
     </div>
 
-<h1>Back</h1>
-<a class="btn btn-yak" href="{% url 'tennis' %}">Back</a><br><br>
+    <div class="row">
+        <div class="col-sm-6" style="background-color: #ffe5ea; padding: 10px; border: 4px solid white; text-align: center">
+            <a class="btn btn-yak" href="{% url 'tennis_delete_game' set.id %}">Delete Last Game</a>
+        </div>
+        <div class="col-sm-6" style="background-color: #ffe5ea; padding: 10px; border: 4px solid white; text-align: center">
+            <a class="btn btn-yak" href="{% url 'tennis' %}">Back</a>
+        </div>
+    </div>
 
 
 {% endblock %}
