--- a/app/templates/tennis_match.html
+++ b/app/templates/tennis_match.html
@@ -10,10 +10,11 @@
             <h1>{{ match.game_score }}</h1>
             <div class="row">
             {% for set in match.sets %}
-                <div class="col-sm-3" style="background-color: #ffe5ea; padding: 10px; border: 4px solid pink; text-align: center">
+                <div class="col-sm-3" style="background-color: #fff5fa; padding: 4px; border: 3px solid pink; margin-left: 2px; margin-right: 2px; text-align: center">
                     <h3>{{ set.score_string | safe }}</h3>
                     <b>Games</b><br>
                     {{ set.game_scores | safe }}<br>
+                    {{ set.points }}
                 </div>
             {% endfor %}
             </div>
