--- a/app/templates/tennis_match.html
+++ b/app/templates/tennis_match.html
@@ -3,14 +3,19 @@
 
     <div class="row">
         <div class="col-sm-2" style="background-color: #ffe5ea; padding: 10px; border: 4px solid white; text-align: center">
-            <a class="btn btn-yak" href="{% url 'tennis_score' set.id 1 0 %}">{{ match.play_A }}</a><br><br>
+            <a class="btn btn-yak" href="{% url 'tennis_score' set.id 1 0 %}"
+               {% if match.server == 1 %}
+               style="border: 3px solid white"
+                {% endif %}
+            >{{ match.play_A }}</a><br>{{ match.serv_per_A }}<br><br>
             <a class="btn btn-yak" href="{% url 'tennis_score' set.id -1 0 %}">-</a>
         </div>
         <div class="col-sm-8" style="background-color: #ffe5ea; padding: 10px; border: 4px solid white; text-align: center">
             <h1>{{ match.game_score }}</h1>
+            {{ match.points }}
             <div class="row">
             {% for set in match.sets %}
-                <div class="col-sm-3" style="background-color: #fff5fa; padding: 4px; border: 3px solid pink; margin-left: 2px; margin-right: 2px; text-align: center">
+                <div class="col-sm-3" style="background-color: #fff5fa; padding: 4px; border: 3px solid pink; text-align: center">
                     <h3>{{ set.score_string | safe }}</h3>
                     <b>Games</b><br>
                     {{ set.game_scores | safe }}<br>
@@ -20,7 +25,11 @@
             </div>
         </div>
         <div class="col-sm-2" style="background-color: #ffe5ea; padding: 10px; border: 4px solid white; text-align: center">
-            <a class="btn btn-yak" href="{% url 'tennis_score' set.id 0 1 %}">{{ match.play_B }}</a><br><br>
+            <a class="btn btn-yak" href="{% url 'tennis_score' set.id 0 1 %}"
+               {% if match.server == 0 %}
+                   style="border: 3px solid white"
+               {% endif %}
+            >{{ match.play_B }}</a><br>{{ match.serv_per_B }}<br><br>
             <a class="btn btn-yak" href="{% url 'tennis_score' set.id 0 -1 %}">-</a>
         </div>
     </div>
