Added game prob to tennis

--- a/app/templates/wordle_test.html
+++ b/app/templates/wordle_test.html
@@ -20,8 +20,7 @@
             {% endfor %}
         </table>
         Future Average Score: <b>{{ score }}</b> (originally 3.47)<br>
-        {{ message }}<br>
-        {{ message2 }}<br><br>
+        {{ message }}<br><br>
         <a href="{% url 'wordle_test' %}" class='btn btn-yak'>Redo</a><br>
     </div>
     <div class="col-sm-4">
