--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -30,6 +30,7 @@
       </ul>
    {% else %}
       <ul class="nav justify-content-end">
+        <li class="nav-item"><a class="nav-link active" href="{% url 'tennis' %}">Tennis</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'timers' %}">Timer</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'login' %}">Login</a></li>
       </ul>
