--- a/app/templates/tennis_match.html
+++ b/app/templates/tennis_match.html
@@ -7,12 +7,16 @@
                {% if match.server == 1 %}
                style="border: 3px solid white"
                 {% endif %}
-            >{{ match.play_A }}</a><br>{{ match.serv_per_A }}<br><br>
+            >{{ match.play_A }}</a><br>{{ points.points_A_serv }}-{{ points.points_B_rec }}<br>{{ points.percent_A }}%
+               {% if match.server == 1 %}
+                    => {{ points.game_prob_A }}%
+               {% endif %}
+            <br><br>
             <a class="btn btn-yak" href="{% url 'tennis_score' set.id -1 0 %}">-</a>
         </div>
         <div class="col-sm-8" style="background-color: #ffe5ea; padding: 10px; border: 4px solid white; text-align: center">
             <h1>{{ match.game_score }}</h1>
-            {{ match.points }}
+            {{ points.points_A }}-{{ points.points_B }}
             <div class="row">
             {% for set in match.sets %}
                 <div class="col-sm-3" style="background-color: #fff5fa; padding: 4px; border: 3px solid pink; text-align: center">
@@ -29,7 +33,14 @@
                {% if match.server == 0 %}
                    style="border: 3px solid white"
                {% endif %}
-            >{{ match.play_B }}</a><br>{{ match.serv_per_B }}<br><br>
+            >{{ match.play_B }}</a><br>{{ points.points_B_serv }}-{{ points.points_A_rec }}<br>{{ points.percent_B }}%
+
+               {% if match.server == 0 %}
+                    => {{ points.game_prob_B }}%
+               {% endif %}
+
+
+            <br><br>
             <a class="btn btn-yak" href="{% url 'tennis_score' set.id 0 -1 %}">-</a>
         </div>
     </div>
