Updated nav bar

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -10,18 +10,36 @@
           </ul>
       {% else %}
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link active" href="{% url 'diary' %}">Diary</a></li>
-          <li class="nav-item"><a class="nav-link active" href="{% url 'events' %}">Events</a></li>
-          <li class="nav-item"><a class="nav-link active" href="{% url 'notes' %}">Notes</a></li>
-          <li class="nav-item"><a class="nav-link active" href="{% url 'quotes' %}">Quotes</a></li>
-          <li class="nav-item"><a class="nav-link active" href="{% url 'birthdays' %}">Birthdays</a></li>
-          <li class="nav-item"><a class="nav-link active" href="{% url 'shopping'%}">Shopping</a></li>
-          <li class="nav-item"><a class="nav-link active" href="{% url 'dogs' %}">Dogs</a></li>
-          <li class="nav-item"><a class="nav-link active" href="{% url 'clash' %}">Clash</a></li>
-          <li class="nav-item"><a class="nav-link active" href="{% url 'tennis' %}">Tennis</a></li>
-          <li class="nav-item"><a class="nav-link active" href="{% url 'timers' %}">Timer</a></li>
-          <li class="nav-item"><a class="nav-link active" href="{% url 'wordle'%}">Wordle</a></li>
-          <li class="nav-item"><a class="nav-link active" href="{% url 'word'%}">Word</a></li>
+          <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Main</a>
+            <ul class="dropdown-menu">
+              <li><a class="nav-link active" href="{% url 'diary' %}">Diary</a></li>
+              <li><a class="nav-link active" href="{% url 'events' %}">Events</a></li>
+              <li><a class="nav-link active" href="{% url 'notes' %}">Notes</a></li>
+              <li><a class="nav-link active" href="{% url 'quotes' %}">Quotes</a></li>
+              <li><a class="nav-link active" href="{% url 'birthdays' %}">Birthdays</a></li>
+              <li><a class="nav-link active" href="{% url 'shopping' %}">Shopping</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Games</a>
+            <ul class="dropdown-menu">
+              <li><a class="nav-link active" href="{% url 'clash' %}">Clash</a></li>
+              <li><a class="nav-link active" href="{% url 'tennis' %}">Tennis</a></li>
+              <li><a class="nav-link active" href="{% url 'wordle' %}">Wordle</a></li>
+              <li><a class="nav-link active" href="{% url 'word' %}">Word</a></li>
+            </ul>
+          </li>
+
+          <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dogs</a>
+            <ul class="dropdown-menu">
+              <li><a class="nav-link active" href="{% url 'dogs' %}">Dogs</a></li>
+              <li><a class="nav-link active" href="{% url 'dog_diary' %}">Diary</a></li>
+            </ul>
+          </li>
+
+
         </ul>
       {% endif %}
       <ul class="nav justify-content-end">
